--- a/Diplom.Mobile/Diplom.Mobile/Views/AccountInfoPage.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/AccountInfoPage.xaml
@@ -30,6 +30,14 @@
 
                 <Label Text="Ваш возраст" Margin="0, 5, 0, 0"/>
                 <Entry x:Name="yearsEntry" />
+                
+                <Label Text="Ваш пол" Margin="0, 5, 0, 0"/>
+                <Picker x:Name="picker"  MinimumWidthRequest="50" WidthRequest="51" >
+                    <Picker.Items>
+                        <x:String>Мужской</x:String>
+                        <x:String>Женский</x:String>
+                    </Picker.Items>
+                </Picker>
 
                 <Label Text="Ваш Email" Margin="0, 5, 0, 0"/>
                 <Entry x:Name="emailEntry" />
