--- a/Diplom.Mobile/Diplom.Mobile/Views/NewsPage.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/NewsPage.xaml
@@ -19,7 +19,8 @@
             <StackLayout>
                 <ListView x:Name="newsList"
                           HasUnevenRows="True"
-                          ItemsSource="{Binding Contented}"
+                          ItemsSource="{Binding ContentList}"
+                          ItemAppearing="NewsList_ItemAppearing"
                           Margin="10,0,10,0">
                     <ListView.ItemTemplate>
                         <DataTemplate>
