--- a/Diplom.Mobile/Diplom.Mobile/Views/OrderPage.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/OrderPage.xaml
@@ -12,7 +12,7 @@
         public StatusType Status { get; set; } // статус заказа-->
 
     
-    <StackLayout x:Name="asd"  Margin="10">
+    <StackLayout Margin="10">
         <Label Text="Выберите дату приготовления"/>
         <DatePicker x:Name="datePicker" DateSelected="DatePicker_DateSelected" Format="D"/>
 
@@ -26,7 +26,7 @@
             <StackLayout Margin="10">
                 <Label Text="Выберите тип оплаты" />
                 <Label x:Name="qwe"/>
-                    <Picker x:Name="picker"  MinimumWidthRequest="50" WidthRequest="51" >
+                <Picker x:Name="picker"  MinimumWidthRequest="50" WidthRequest="51" >
                     <Picker.Items>
                         <x:String>Наличными</x:String>
                         <x:String>Карта</x:String>
@@ -34,7 +34,7 @@
                 </Picker>
 
                 <StackLayout Margin="10">
-                    <Button x:Name="button1" Text="Заказать" Clicked="Button_Clicked"/>
+                    <Button Text="Заказать" Clicked="Button_Clicked"/>
                 </StackLayout>
             </StackLayout>
         </StackLayout>
