--- a/Diplom.Mobile/Diplom.Mobile/Views/OrderListDetailPage.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/OrderListDetailPage.xaml
@@ -1,4 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Diplom.Mobile.Views.OrderListDetailPage">
@@ -11,12 +12,12 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <StackLayout Grid.Column="0" Grid.Row="0" Margin="20" >
+        <StackLayout Grid.Column="0" Grid.Row="0" Margin="20">
             <StackLayout>
-                <ListView x:Name="basketList" 
-                    HasUnevenRows="False" 
-                    ItemsSource="{Binding BasketList}" 
-                    RowHeight="165">
+                <ListView x:Name="basketList"
+                          HasUnevenRows="False"
+                          ItemsSource="{Binding BasketList}"
+                          RowHeight="165">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
@@ -25,29 +26,32 @@
                                           CommandParameter="{Binding .}"
                                           Text="More" />-->
                                     <MenuItem Clicked="OnDelete"
-                                          CommandParameter="{Binding .}"
-                                          Text="Delete" IsDestructive="True" />
+                                              CommandParameter="{Binding .}"
+                                              Text="Delete" IsDestructive="True" />
                                 </ViewCell.ContextActions>
                                 <ViewCell.View>
                                     <StackLayout Orientation="Horizontal">
-                                        <Image Source="{Binding Img}"  WidthRequest="90" HeightRequest="110" />
+                                        <Image Source="{Binding Img}" WidthRequest="90" HeightRequest="110" />
                                         <StackLayout Orientation="Vertical">
                                             <Label Text="{Binding Name}" FontSize="30" />
-                                            <Label Text="{Binding Price, StringFormat='Цена за порцию: {0} Руб.'}" FontSize="23"/>
+                                            <Label Text="{Binding Price, StringFormat='Цена за порцию: {0} Руб.'}"
+                                                   FontSize="23" />
 
                                             <!--<Label Text="{Binding ShortDescription}" FontSize="17" />-->
                                             <!--<Button Text="Удалить" />-->
 
                                             <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
-                                                <Button Text="-" Command="{Binding QuantityMinusCommand}" CommandParameter="{Binding BasketList}" Clicked="Button_Clicked_2"/>
-                                                <Label Text="{Binding Quantity}" FontSize="30" VerticalOptions="End" HorizontalOptions="Center" />
-                                                <Button Text="+"  CommandParameter="{Binding BasketList}" Clicked="Button_Clicked_1" />
+                                                <Button Text="-" Command="{Binding QuantityMinusCommand}"
+                                                        CommandParameter="{Binding BasketList}"
+                                                        Clicked="Button_Clicked_2" />
+                                                <Label Text="{Binding Quantity}" FontSize="30" VerticalOptions="End"
+                                                       HorizontalOptions="Center" />
+                                                <Button Text="+" CommandParameter="{Binding BasketList}"
+                                                        Clicked="Button_Clicked_1" />
                                                 <!--Command="{Binding QuantityPlusCommand}"-->
                                                 <!--<Stepper Minimum="0" Maximum="10" Increment="1" Value="{Binding Quantity}" ValueChanged="Stepper_ValueChanged" VerticalOptions="End" HorizontalOptions="Center"/>-->
                                                 <!--<Button Text="отчистить" Clicked="Button_Clicked"/>-->
-
                                             </StackLayout>
-
                                         </StackLayout>
                                     </StackLayout>
                                 </ViewCell.View>
@@ -60,9 +64,7 @@
 
         <StackLayout Spacing="8" Grid.Column="0" Grid.Row="1">
             <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
-                <Label Text="Общая цена заказа:" FontSize="23"/>
-                <Label x:Name="cena" Text="{Binding AllPrice}" FontSize="23"/>
-                <Label  Text="Руб." FontSize="23"/>
+                <Label Text="{Binding AllPrice, StringFormat='Общая цена заказа: {0} руб.'}" FontSize="23" />
             </StackLayout>
         </StackLayout>
     </Grid>
