--- a/Diplom.Mobile/Diplom.Mobile/Views/OrderListPage.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/OrderListPage.xaml
@@ -1,10 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Diplom.Mobile"
              x:Class="Diplom.Mobile.Views.OrderListPage">
     <ContentPage.Resources>
-        <local:ConverterPaymentType x:Key="PaymentTypeConverter"/>
+        <local:ConverterPaymentType x:Key="PaymentTypeConverter" />
     </ContentPage.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -15,10 +16,10 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <StackLayout Grid.Column="0" Grid.Row="0" Margin="20" >
+        <StackLayout Grid.Column="0" Grid.Row="0" Margin="20">
             <StackLayout>
                 <ListView
-                    HasUnevenRows="True" 
+                    HasUnevenRows="True"
                     ItemsSource="{Binding OrderList}"
                     ItemTapped="BasketList_ItemTapped">
                     <ListView.ItemTemplate>
@@ -29,20 +30,27 @@
                                           CommandParameter="{Binding .}"
                                           Text="More" />-->
                                     <MenuItem Clicked="OnDelete"
-                                          CommandParameter="{Binding .}"
-                                          Text="Delete" IsDestructive="True" />
+                                              CommandParameter="{Binding .}"
+                                              Text="Delete" IsDestructive="True" />
                                 </ViewCell.ContextActions>
                                 <ViewCell.View>
                                     <StackLayout Orientation="Vertical">
                                         <!--Дата и время выполнения заказа-->
-                                        <Label Text="{Binding LeadTime, StringFormat='Заказ будет готов к: {0}'}" FontSize="30" />
-                                        <Label Text="{Binding TotalPrice, StringFormat='Стоимость заказа: {0} Руб.'}" FontSize="23"/>
-                                        <Label Text="{Binding TypePayment, Converter={StaticResource PaymentTypeConverter}, StringFormat='Тип оплаты: {0}'}" FontSize="23"/>
+                                        <Label Text="{Binding LeadTime, StringFormat='Заказ будет готов к: {0}'}"
+                                               FontSize="30" />
+                                        <Label Text="{Binding TotalPrice, StringFormat='Стоимость заказа: {0} Руб.'}"
+                                               FontSize="23" />
+                                        <Label
+                                            Text="{Binding TypePayment, Converter={StaticResource PaymentTypeConverter}, StringFormat='Тип оплаты: {0}'}"
+                                            FontSize="23" />
 
                                         <StackLayout Orientation="Horizontal" HorizontalOptions="End">
-                                            <Label Text="{Binding Status, Converter={StaticResource PaymentTypeConverter}, StringFormat='Статус заказа: {0}'}" FontSize="23" VerticalOptions="End" HorizontalOptions="End" />
+                                            <Label
+                                                Text="{Binding Status, Converter={StaticResource PaymentTypeConverter}, StringFormat='Статус заказа: {0}'}"
+                                                FontSize="23" VerticalOptions="End" HorizontalOptions="End" />
                                         </StackLayout>
-                                        <Button Text="Подробнее" HorizontalOptions="Fill" CommandParameter="{Binding OrderList}" Clicked="Button_Clicked"/>
+                                        <Button Text="Подробнее" HorizontalOptions="Fill"
+                                                CommandParameter="{Binding OrderList}" Clicked="Button_Clicked" />
                                     </StackLayout>
                                 </ViewCell.View>
                             </ViewCell>
