--- a/Diplom.Mobile/Diplom.Mobile/Views/OrderPage.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/OrderPage.xaml
@@ -1,4 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Diplom.Mobile.Views.OrderPage">
@@ -11,22 +12,22 @@
         public PaymentType TypePayment { get; set; } // тип оплаты +++++++++++++++
         public StatusType Status { get; set; } // статус заказа-->
 
-    
-    <StackLayout Margin="10">
-        <Label Text="Выберите дату приготовления"/>
-        <DatePicker x:Name="datePicker" DateSelected="DatePicker_DateSelected" Format="D"/>
 
-        <Label Text="Выберите время приготовления с 8:00 до 18:00"/>
-        <TimePicker x:Name="timePicker" Format = "HH:mm" PropertyChanged="TimePicker_PropertyChanged"/>
+    <StackLayout Margin="10">
+        <Label Text="Выберите дату приготовления" />
+        <DatePicker x:Name="datePicker" DateSelected="DatePicker_DateSelected" Format="D" />
+
+        <Label Text="Выберите время приготовления с 8:00 до 18:00" />
+        <TimePicker x:Name="timePicker" Format="HH:mm" PropertyChanged="TimePicker_PropertyChanged" />
 
         <StackLayout Margin="10">
             <Label Text="Введите коментарий к заказу" />
-            <Editor x:Name="reviewEntry" BackgroundColor="#E5E3DE" HeightRequest="100"/>
+            <Editor x:Name="reviewEntry" BackgroundColor="#E5E3DE" HeightRequest="100" />
 
             <StackLayout Margin="10">
                 <Label Text="Выберите тип оплаты" />
-                <Label x:Name="qwe"/>
-                <Picker x:Name="picker"  MinimumWidthRequest="50" WidthRequest="51" >
+                <Label />
+                <Picker x:Name="picker" MinimumWidthRequest="50" WidthRequest="51">
                     <Picker.Items>
                         <x:String>Наличными</x:String>
                         <x:String>Карта</x:String>
@@ -34,10 +35,9 @@
                 </Picker>
 
                 <StackLayout Margin="10">
-                    <Button Text="Заказать" Clicked="Button_Clicked"/>
+                    <Button Text="Заказать" Clicked="Button_Clicked" />
                 </StackLayout>
             </StackLayout>
         </StackLayout>
     </StackLayout>
-
 </ContentPage>
