--- a/Diplom.Mobile/Diplom.Mobile/Views/RegistrationPage.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/RegistrationPage.xaml
@@ -1,4 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
@@ -14,21 +15,22 @@
             <RowDefinition Height="7*" />
         </Grid.RowDefinitions>
 
-        <StackLayout Spacing="8" Orientation="Horizontal" Grid.Column="0" Grid.Row="0" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+        <StackLayout Spacing="8" Orientation="Horizontal" Grid.Column="0" Grid.Row="0"
+                     HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
             <Button Text="Вход" />
             <Button Text="Регистрация" />
         </StackLayout>
         <ScrollView Grid.Column="0" Grid.Row="1" Margin="0,20,0,0">
-            <StackLayout Grid.Column="0" Grid.Row="1" Margin="20" >
-                <Entry x:Name="firstNameEntry" Placeholder = "Имя"  />
-                <Entry x:Name="lastNameEntry" Placeholder = "Фамилия"  />
-                <Entry x:Name="emailEntry" Placeholder = "Email"  />
-                <Entry x:Name="telefonEntry" Placeholder = "Телефон"  />
-                <Entry x:Name="yearsEntry" Placeholder = "Возраст"  />
-                <Entry x:Name="loginEntry" Placeholder = "Login"  />
-                <Entry x:Name="passwordEntry"  Placeholder = "Password" IsPassword ="True"  MaxLength="25" />
+            <StackLayout Grid.Column="0" Grid.Row="1" Margin="20">
+                <Entry x:Name="firstNameEntry" Placeholder="Имя" />
+                <Entry x:Name="lastNameEntry" Placeholder="Фамилия" />
+                <Entry x:Name="emailEntry" Placeholder="Email" />
+                <Entry x:Name="telefonEntry" Placeholder="Телефон" />
+                <Entry x:Name="yearsEntry" Placeholder="Возраст" />
+                <Entry x:Name="loginEntry" Placeholder="Login" />
+                <Entry x:Name="passwordEntry" Placeholder="Password" IsPassword="True" MaxLength="25" />
 
-                <Picker x:Name="picker"  MinimumWidthRequest="50" WidthRequest="51" >
+                <Picker x:Name="picker" MinimumWidthRequest="50" WidthRequest="51">
                     <Picker.Items>
                         <x:String>Мужской</x:String>
                         <x:String>Женский</x:String>
