--- a/Diplom.Mobile/Diplom.Mobile/Views/ReviewsPage.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/ReviewsPage.xaml
@@ -1,4 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Diplom.Mobile.Views.ReviewsPage">
@@ -10,12 +11,12 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackLayout Spacing="8" Grid.Column="0" Grid.Row="0" >
+        <StackLayout Spacing="8" Grid.Column="0" Grid.Row="0">
             <Label Font="24" Text="Введите свой отзыв" />
-            <Editor x:Name="reviewEntry" BackgroundColor="#a5d6a7" HeightRequest="50"/>
+            <Editor x:Name="reviewEntry" BackgroundColor="#a5d6a7" HeightRequest="50" />
 
-            <Label Text="Поставьте оценку заведению от 1 до 5" HorizontalOptions="Center"/>
-            
+            <Label Text="Поставьте оценку заведению от 1 до 5" HorizontalOptions="Center" />
+
             <Picker x:Name="picker" Margin="100,0,100,0" MinimumWidthRequest="50" WidthRequest="51" SelectedIndex="3">
                 <Picker.Items>
                     <x:String>1</x:String>
@@ -28,7 +29,7 @@
             <Button Text="Отправить" Clicked="Button_Clicked" Margin="150,0,5,5" />
         </StackLayout>
 
-        <StackLayout Grid.Column="0" Grid.Row="1" Margin="20" >
+        <StackLayout Grid.Column="0" Grid.Row="1" Margin="20">
             <StackLayout>
                 <ListView x:Name="reviewList"
                           HasUnevenRows="True"
@@ -41,7 +42,8 @@
                                     <StackLayout>
                                         <Label Text="{Binding Text}" FontSize="18" />
                                         <Label Text="{Binding Rating, StringFormat='Оценка заведению: {0}/10'}" />
-                                        <Label Text="{Binding Date}" FontSize="Small" HorizontalOptions="End" HorizontalTextAlignment="End" />
+                                        <Label Text="{Binding Date}" FontSize="Small" HorizontalOptions="End"
+                                               HorizontalTextAlignment="End" />
                                         <Label Text="{Binding UserId}" />
                                     </StackLayout>
                                 </ViewCell.View>
