--- a/Diplom.Mobile/Diplom.Mobile/Views/BasketPage.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/BasketPage.xaml
@@ -35,9 +35,9 @@
                                     <StackLayout Orientation="Horizontal">
                                         <Image Source="{Binding Img}" WidthRequest="90" HeightRequest="110" />
                                         <StackLayout Orientation="Vertical">
-                                            <Label Text="{Binding Name}" FontSize="30" />
-                                            <Label Text="{Binding Price, StringFormat='Цена за порцию: {0} Руб.'}"
-                                                   FontSize="23" />
+                                            <Label Text="{Binding Name}" FontSize="27" Style="{StaticResource labelName}"/>
+                                            <Label Text="{Binding Price, StringFormat=' {0} Руб./Шт.'}"
+                                                   FontSize="17" Style="{StaticResource labelTextDescription}" />
 
                                             <!--<Label Text="{Binding ShortDescription}" FontSize="17" />-->
                                             <!--<Button Text="Удалить" />-->
@@ -45,11 +45,11 @@
                                             <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
                                                 <Button Text="-" Command="{Binding QuantityMinusCommand}"
                                                         CommandParameter="{Binding BasketList}"
-                                                        Clicked="Button_Clicked_2" />
+                                                        Clicked="Button_Clicked_2" FontAttributes="Bold" />
                                                 <Label Text="{Binding Quantity}" FontSize="30" VerticalOptions="End"
-                                                       HorizontalOptions="Center" />
+                                                       HorizontalOptions="Center" Style="{StaticResource labelName}" />
                                                 <Button Text="+" CommandParameter="{Binding BasketList}"
-                                                        Clicked="Button_Clicked_1" />
+                                                        Clicked="Button_Clicked_1" FontAttributes="Bold" />
                                                 <!--Command="{Binding QuantityPlusCommand}"-->
                                                 <!--<Stepper Minimum="0" Maximum="10" Increment="1" Value="{Binding Quantity}" ValueChanged="Stepper_ValueChanged" VerticalOptions="End" HorizontalOptions="Center"/>-->
                                                 <!--<Button Text="отчистить" Clicked="Button_Clicked"/>-->
@@ -66,11 +66,11 @@
 
         <StackLayout Spacing="8" Grid.Column="0" Grid.Row="1">
             <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
-                <Label Text="Общая цена заказа:" FontSize="23" />
-                <Label x:Name="cena" Text="{Binding AllPrice}" FontSize="23" />
-                <Label Text="Руб." FontSize="23" />
+                <Label Text="Общая цена заказа:" FontSize="23" Style="{StaticResource labelTextDescription}" />
+                <Label x:Name="cena" Text="{Binding AllPrice}" FontSize="23" Style="{StaticResource labelName}" />
+                <Label Text="Руб." FontSize="23" Style="{StaticResource labelTextDescription}" />
             </StackLayout>
-            <Button Text="Оформить заказ" Clicked="Button_Clicked_3" />
+            <Button Text="Оформить заказ" Clicked="Button_Clicked_3" Style="{StaticResource ButtonShop}" Margin="5" />
         </StackLayout>
     </Grid>
 </ContentPage>
