--- a/Diplom.Mobile/Diplom.Mobile/Views/ChangePasswordPage.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/ChangePasswordPage.xaml
@@ -2,18 +2,19 @@
 
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Diplom.Mobile.Views.ChangePasswordPage">
+             x:Class="Diplom.Mobile.Views.ChangePasswordPage"
+              Title="Изменение пароля">
     <ContentPage.Content>
         <ScrollView>
-            <StackLayout VerticalOptions="Center">
-                <Label Text="Старый пароль" Margin="0, 5, 0, 0" />
-                <Entry x:Name="passwordEntry" Placeholder="Password" IsPassword="True" />
+            <StackLayout VerticalOptions="Center" Margin="5">
+                <Label Text="Старый пароль" Margin="0, 5, 0, 0" Style="{StaticResource labelName}"/>
+                <Entry x:Name="passwordEntry" Placeholder="Password" IsPassword="True" MaxLength="30" />
 
-                <Label Text="Новый пароль" Margin="0, 5, 0, 0" />
-                <Entry x:Name="passworAgaindEntry" Placeholder="Confirm password" IsPassword="True" />
+                <Label Text="Новый пароль" Margin="0, 5, 0, 0" Style="{StaticResource labelName}" />
+                <Entry x:Name="passworAgaindEntry" Placeholder="Confirm password" IsPassword="True" MaxLength="30" />
 
                 <!--FontSize="Large"-->
-                <Button Text="Изменить пароль" Clicked="Button_Clicked" />
+                <Button Text="Изменить пароль" Clicked="Button_Clicked" Style="{StaticResource ButtonShop}" Margin="10"/>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
