--- a/Diplom.Mobile/Diplom.Mobile/Views/LoginPage.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/LoginPage.xaml
@@ -17,12 +17,12 @@
         </Grid.RowDefinitions>
 
         <StackLayout Grid.Column="0" Grid.Row="1" Margin="20">
-            <Entry x:Name="loginEntry" Placeholder="Login" />
-            <Entry x:Name="passwordEntry" Placeholder="Password" IsPassword="True" />
+            <Entry x:Name="loginEntry" Placeholder="Логин" />
+            <Entry x:Name="passwordEntry" Placeholder="Пароль" IsPassword="True" />
 
-            <Button Text="Войти" Clicked="Button_Clicked" Margin="40, 10" />
-            <Label Text="Нет аккаунта? Зарегистрируйтесь!" HorizontalOptions="Center" />
-            <Button Text="Регистрация" Clicked="Button_Clicked_1" Margin="40, 10" />
+            <Button Text="Войти" Clicked="Button_Clicked" Margin="40, 10" Style="{StaticResource ButtonShop}" />
+            <Label Text="Нет аккаунта? Зарегистрируйтесь!" HorizontalOptions="Center" Style="{StaticResource labelTextDescription}" />
+            <Button Text="Регистрация" Clicked="Button_Clicked_1" Margin="40, 10" Style="{StaticResource ButtonShop}" />
             <!--<Button Text="жмак" Clicked="Button_Clicked_2" Margin="40, 10"/>-->
         </StackLayout>
     </Grid>
