--- a/Diplom.Mobile/Diplom.Mobile/Views/NewsPage.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/NewsPage.xaml
@@ -2,7 +2,8 @@
 
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Diplom.Mobile.Views.NewsPage">
+             x:Class="Diplom.Mobile.Views.NewsPage"
+             Title="Новости">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -12,8 +13,9 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <StackLayout Spacing="8" Grid.Column="0" Grid.Row="0">
-            <Label Text="это новости тут можно посмотреть новинки и много всякого другого коней tq tq tq sss " HorizontalOptions="Center" />
-            <Button Clicked="Button_Clicked" />
+            <Label Text="В новостной ленте вы можите увидеть все, что происходило в заведении за последнее время." HorizontalTextAlignment="Center" HorizontalOptions="Center" TextColor="#A4A4A4" />
+            <!--<Label Text="это новости тут можно" HorizontalOptions="Center" Style="{StaticResource labeleStyle}"/>-->
+            <!--<Button Clicked="Button_Clicked" />-->
         </StackLayout>
 
         <StackLayout Grid.Column="0" Grid.Row="1">
@@ -33,11 +35,11 @@
                             <ViewCell>
                                 <ViewCell.View>
                                     <StackLayout Orientation="Vertical">
-                                        <Image Source="{Binding Img}" Aspect="AspectFit" />
+                                        <Image Source="{Binding Img}" Aspect="AspectFit" HeightRequest="200" />
                                         <StackLayout>
-                                            <Label Text="{Binding Name}" FontSize="30" />
-                                            <Label Text="{Binding Text}" FontSize="18" />
-                                            <Label Text="{Binding Date}" FontSize="9" HorizontalOptions="End" />
+                                            <Label Text="{Binding Name}" FontSize="27" Style="{StaticResource labelNameBold}"  />
+                                            <Label Text="{Binding Text}" FontSize="17" Style="{StaticResource labelTextDescription}" />
+                                            <Label Text="{Binding Date}" FontSize="9" HorizontalOptions="End" Style="{StaticResource Data}" />
                                         </StackLayout>
                                     </StackLayout>
                                 </ViewCell.View>
