--- a/Diplom.Mobile/Diplom.Mobile/Views/ProductsPage.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/ProductsPage.xaml
@@ -13,8 +13,8 @@
         </Grid.RowDefinitions>
 
         <StackLayout Spacing="8" Grid.Column="0" Grid.Row="0">
-            <Label Font="24" Text="Выберите тип блюда" HorizontalOptions="Center" />
-            <Picker x:Name="picker" SelectedIndexChanged="Picker_SelectedIndexChanged">
+            <Label Font="24" Text="Выберите тип блюда" HorizontalOptions="Center" HorizontalTextAlignment="Center" Style="{StaticResource labelTextDescription}" />
+            <Picker x:Name="picker" SelectedIndexChanged="Picker_SelectedIndexChanged" SelectedIndex="0">
                 <Picker.Items>
                     <x:String>Напитки</x:String>
                     <x:String>Угощения</x:String>
@@ -27,8 +27,13 @@
             <StackLayout>
                 <ListView x:Name="menuList"
                           HasUnevenRows="False"
-                          ItemsSource="{Binding Menus}"
+                          CachingStrategy="RecycleElement"
+                          ItemsSource="{Binding ProductList}"
                           RowHeight="180"
+                          IsPullToRefreshEnabled="True"
+
+                          SelectionMode="None"
+                          ItemAppearing="ProductList_ItemAppearing"
                           ItemTapped="MenuList_ItemTapped">
                     <ListView.ItemTemplate>
                         <DataTemplate>
@@ -36,9 +41,9 @@
                                 <ViewCell.View>
                                     <StackLayout Orientation="Horizontal">
                                         <Image Source="{Binding Img}" WidthRequest="90" HeightRequest="110" />
-                                        <StackLayout>
-                                            <Label Text="{Binding Name}" FontSize="21" />
-                                            <Label Text="{Binding ShortDescription}" FontSize="17" />
+                                        <StackLayout Margin="4">
+                                            <Label Text="{Binding Name}" FontSize="21"  Style="{StaticResource labelNameBold}"/>
+                                            <Label Text="{Binding ShortDescription}" FontSize="17" Style="{StaticResource labelTextDescription}" />
                                         </StackLayout>
                                     </StackLayout>
                                 </ViewCell.View>
