--- a/Diplom.Mobile/Diplom.Mobile/Views/ReviewsPage.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/ReviewsPage.xaml
@@ -12,10 +12,10 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <StackLayout Spacing="8" Grid.Column="0" Grid.Row="0">
-            <Label Font="24" Text="Введите свой отзыв" />
-            <Editor x:Name="reviewEntry" BackgroundColor="#a5d6a7" HeightRequest="50" />
+            <Label Font="24" Text="Введите свой отзыв" TextColor="#A4A4A4" HorizontalTextAlignment="Center"/>
+            <Editor x:Name="reviewEntry" BackgroundColor="#EBEBEB" HeightRequest="50" />
 
-            <Label Text="Поставьте оценку заведению от 1 до 5" HorizontalOptions="Center" />
+            <Label Text="Поставьте оценку заведению от 1 до 5" HorizontalOptions="Center"  TextColor="#A4A4A4"/>
 
             <Picker x:Name="picker" Margin="100,0,100,0" MinimumWidthRequest="50" WidthRequest="51" SelectedIndex="3">
                 <Picker.Items>
@@ -26,25 +26,32 @@
                     <x:String>5</x:String>
                 </Picker.Items>
             </Picker>
-            <Button Text="Отправить" Clicked="Button_Clicked" Margin="150,0,5,5" />
+            <Button Text="Отправить" Clicked="Button_Clicked" Margin="5,0,5,5" Style="{StaticResource ButtonShop}" />
         </StackLayout>
 
         <StackLayout Grid.Column="0" Grid.Row="1" Margin="20">
             <StackLayout>
                 <ListView x:Name="reviewList"
                           HasUnevenRows="True"
-                          ItemsSource="{Binding Reviewss}"
-                          ItemTapped="OnItemTapped">
+                          CachingStrategy="RecycleElement"
+                          ItemsSource="{Binding ReviewsList}"
+                          ItemTapped="OnItemTapped"
+                          IsPullToRefreshEnabled="True"
+                          RefreshCommand="{Binding RefreshCommand}"
+                          IsRefreshing="{Binding IsRefreshing}"
+                          SelectionMode="None"
+                          ItemAppearing="ReviewList_ItemAppearing">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
                                 <ViewCell.View>
                                     <StackLayout>
-                                        <Label Text="{Binding Text}" FontSize="18" />
-                                        <Label Text="{Binding Rating, StringFormat='Оценка заведению: {0}/10'}" />
-                                        <Label Text="{Binding Date}" FontSize="Small" HorizontalOptions="End"
-                                               HorizontalTextAlignment="End" />
-                                        <Label Text="{Binding UserId}" />
+                                        <Label Text="{Binding Text}" FontSize="18" Style="{StaticResource labelName}" />
+                                        <Label Text="{Binding Rating, StringFormat='Оценка заведению: {0}/5'}"  Style="{StaticResource labelTextDescription}"/>
+                                        <Label Text="{Binding FirstName}" HorizontalOptions="End"
+                                               HorizontalTextAlignment="End"  Style="{StaticResource labelTextDescription}"/>
+                                        <Label Text="{Binding Date}" FontSize="11" HorizontalOptions="End"
+                                               HorizontalTextAlignment="End" Style="{StaticResource Data}" />
                                     </StackLayout>
                                 </ViewCell.View>
                             </ViewCell>
