--- a/MobileWorker/MobileWorker/Views/OrderListPage.xaml
+++ b/MobileWorker/MobileWorker/Views/OrderListPage.xaml
@@ -2,8 +2,8 @@
 
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:Diplom.Mobile"
-             x:Class="Diplom.Mobile.Views.OrderListPage">
+             xmlns:local="clr-namespace:MobileWorker"
+             x:Class="MobileWorker.Views.OrderListPage">
     <ContentPage.Resources>
         <local:ConverterPaymentType x:Key="PaymentTypeConverter" />
     </ContentPage.Resources>
